<!--
  ~ Copyright 2020 Ivan Kravarščan
  ~
  ~ This file is part of Enchanted Fortress.
  ~
  ~ Enchanted Fortress is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Enchanted Fortress is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Enchanted Fortress.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Enchanted Fortress</string>
    <string name="newGame">New Game</string>
    <string name="end_turn">End turn</string>
    <string name="population">Population</string>
    <string name="farmers">Farmers</string>
    <string name="scholars">Scholars</string>
    <string name="builders">Builders</string>
    <string name="soldiers">Soldiers</string>
    <string name="popDelta">Population growth</string>
    <string name="wallDelta">New walls</string>
    <string name="militaryStrength">Strength</string>
    <string name="researchDelta">Research</string>
    <string name="walls">City walls</string>
    <string name="scouted">Scout report: %1$s demons</string>
    <string name="scoutedLong">Scout report:\n%1$s demons\n%2$s strength\n%3$s total military power</string>
    <string name="attacked">Attacked!\n%1$s demon attackers\n%2$s victims</string>
    <string name="noVictims">Demon attack repelled without casualties</string>
    <string name="farmingTech">Farming</string>
    <string name="buildTech">Masonry</string>
    <string name="soldierTech">Training</string>
    <string name="scholarTech">Scholarship</string>
    <string name="banishTech">Banish demons</string>
    <string name="gameOver">Back to main menu</string>
    <string name="defeat">Demons have defeated you!\nNobody in your fortress survived and the realm in the great peril.</string>
    <string name="victory">Victory!\nYou have banished all demons and the realm is safe now.</string>
    <string name="help">Story &amp; Help</string>
    <string name="helpText"><b>Story</b>\n\nDark days are upon your land; twisted people have made a pact with demons, hell gates have been opened, and demon kind has started to roam this world. As time passes, more hell gates open and the demon army grows stronger and bolder. If they are not stopped, the realm will be overrun.\n\nYour scholars speculate that if there is a ritual to summon the demons then there must be the one to banish them. Help them perform the ritual and defend them from demons who will try to stop them.\n\n<b>How to play</b>\n\nThe majority of the game revolves around distributing population between the following jobs:\n- Farmers - increase population growth\n- Builders - build city walls\n- Soldiers - increase military strength\n- Scholars - research improvements and banish demons\n\nAs time (turns) passes, the demon army\'s strength will grow, and they will mount an attack when they grow confident enough. The attacks don\'t come without warning; your people will report how many demons they\'ve seen. It\'s not an accurate number, but expect them to have at least that many troops. When the attack comes, all of your population participates in the defense, both soldiers and workers. Soldiers are stronger defenders, but if you are caught unprepared, civilians will do their best to survive. A tall city wall is a great way to not get caught unprepared.\n\nUltimately your success depends on balancing your military power and economy. It might be tempting to employ as many people as possible as soldiers, but if the attack doesn\'t come on a given turn, your economy won\'t grow fast enough to handle future demon attacks. Early on, farming improves the economy the most—the more people you have, the more of them you can employ to construct walls and field as soldiers. Research is another way to improve your military and economy in the long term. The entire population participates in research, but similar to military strength, not everyone contributes equally. Scholars (people not assigned to farming, construction, or guard duty) generate more research points than others.\n\nStaying barricaded behind the wall will not make you unconquerable; eventually the demons will grow powerful enough to overcome any defenses. The banishment ritual is the only way to defeat the demons for good. Performing it will gradually close the hell gates, making the demon army grow slower; once finished, it will permanently stop the demon invasion.</string>
    <string name="aboutMe">About</string>
    <string name="turns">turns</string>
    <string name="turn">Turn</string>
    <string name="continueText">Continue</string>
    <string name="difficultySelect">Choose difficulty:</string>
    <string name="aboutDevelopBy">Developed by %1$s</string>
    <string name="aboutTranslateBy">Translation by\n%1$s</string>
    <string name="aboutTrackerAt">Report bugs at:\n%1$s</string>
    <string name="aboutCodeAt">Code:\n%1$s</string>
    <string name="aboutVersion">Version: %1$s</string>
    <string name="aboutSupportAt">Support development:\n%1$s</string>
    <string name="startGame">Start game</string>
    <string name="gatesClosed">Closed %1d hell gates</string>
    <string name="gatesOpened">, demons reopened %1d gates</string>
    <string name="gatesLeft">%1d gates</string>
    <string name="difficultyStartingPop">Starting population: %1s</string>
    <string name="difficultyDemonSpawn">Demon spawn rate: %1s</string>
    <string name="difficultyDemonGrowth">Demon power growth: %1s</string>
    <string name="banishNever">hopeless</string>
    <string name="banishSlow">forever</string>
    <string name="scoresTitle">Hall of Fame</string>
    <string name="scoresTurns">Turns</string>
    <string name="scoresDifficulty">Difficulty</string>
    <string name="scoresButton">Hall of Fame</string>
    <string name="noScores">Win the game and earn your place here.</string>
    <string name="banishProgress">Scholars perform banishment ritual and demons try to increase their power. Demon power is now %1d.</string>
    <string name="banishProgressShort">Demon power is now at %1d.</string>
    <string name="newsButton">News list button</string>
    <string name="moreNews">Other reports</string>
    <string name="battleNotification">We were attacked!</string>
    <string name="banishNotification">banishment</string>
    <string name="scoutNotification">scout report</string>
    <string name="settings">Settings</string>
    <string name="nightMode">Day/night mode</string>
    <string name="resetHofPreference">Reset hall of fame</string>
    <string name="resetHofDialogTitle">Are you sure you want to reset hall of fame?</string>
    <string name="alertYes">Yes</string>
    <string name="alertNo">No</string>
    <string name="nameHeader">Name:</string>
    <string name="battleReport">%1d demons attacked and killed %2d people.</string>
    <!-- Accessibility -->
    <string name="minusButton">Minus button</string>
    <string name="plusButton">Plus button</string>
    <string name="nameHint">Player name</string>
</resources>
