<!--
  ~ Copyright 2019 Ivan Kravarščan
  ~
  ~ This file is part of Enchanted Fortress.
  ~
  ~ Enchanted Fortress is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Enchanted Fortress is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Enchanted Fortress.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="hr.kravarscan.enchantedfortress.MainMenuFragment">

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueText" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame" />

    <Button
        android:id="@+id/scoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresButton" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/help" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/aboutMe" />

</LinearLayout>
