<!--
  ~ Copyright 2019 Ivan Kravarščan
  ~
  ~ This file is part of Enchanted Fortress.
  ~
  ~ Enchanted Fortress is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Enchanted Fortress is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Enchanted Fortress.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            tools:context="hr.kravarscan.enchantedfortress.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutDevelopBy"/>

        <TextView
            android:id="@+id/aboutTranslator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aboutTranslateBy"/>

        <TextView
            android:id="@+id/aboutTracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/aboutTrackerAt"/>

        <TextView
            android:id="@+id/aboutCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/aboutCodeAt"/>

        <TextView
            android:id="@+id/aboutSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/aboutSupportAt"/>

        <TextView
            android:id="@+id/aboutVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aboutVersion"/>
    </LinearLayout>
</ScrollView>
