<!--
  ~ Copyright 2019 Ivan Kravarščan
  ~
  ~ This file is part of Enchanted Fortress.
  ~
  ~ Enchanted Fortress is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Enchanted Fortress is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Enchanted Fortress.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="hr.kravarscan.enchantedfortress.GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <TextView
            android:id="@+id/gameStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/population" />

        <LinearLayout
            android:id="@+id/newsControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/newsButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/newsButton"
                android:src="@drawable/scroll" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/newsHeadlineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/otherNewsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/farmControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/farmMinusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/minusButton"
                android:src="@drawable/minus" />

            <ImageButton
                android:id="@+id/farmPlusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/plusButton"
                android:src="@drawable/plus" />

            <TextView
                android:id="@+id/farmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farmers" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/builderControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/builderMinusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/minusButton"
                android:src="@drawable/minus" />

            <ImageButton
                android:id="@+id/builderPlusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/plusButton"
                android:src="@drawable/plus" />

            <TextView
                android:id="@+id/builderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/builders" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/soldierControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/soldierMinusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/minusButton"
                android:src="@drawable/minus" />

            <ImageButton
                android:id="@+id/soldierPlusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/plusButton"
                android:src="@drawable/plus" />

            <TextView
                android:id="@+id/soliderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soldiers" />

        </LinearLayout>

        <TextView
            android:id="@+id/researchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scholars" />

        <Spinner
            android:id="@+id/researchSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/endTurnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_turn" />

    </LinearLayout>
</ScrollView>