<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Ivan Kravarščan
  ~
  ~ This file is part of Enchanted Fortress.
  ~
  ~ Enchanted Fortress is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Enchanted Fortress is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Enchanted Fortress.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:scrollbars="vertical"
    tools:context="hr.kravarscan.enchantedfortress.ScoresActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scoresTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:text="@string/scoresTitle"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/noScoresHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoresTitle"
            android:text="@string/noScores"
            android:visibility="gone"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/turnsHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/noScoresHeader"
            android:text="@string/scoresTurns"/>

        <TextView
            android:id="@+id/difficultyHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoresTitle"
            android:layout_toRightOf="@id/turnsHeader"
            android:text="@string/scoresDifficulty"
            android:layout_toEndOf="@id/turnsHeader" />

        <LinearLayout
            android:id="@+id/scoreList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/turnsHeader"/>
    </RelativeLayout>

</ScrollView>
